assets/sass/_custom.scss
/* ... */
.filter-action {
  .filter-label {
    font-family: $font1;
    font-size: 14px;
    font-weight: 600;
    line-height: 1.2;
    color: $darkgreen;
    text-transform: uppercase;
    position: relative;
    top: -11px;
  }
  .filter-field {
    display: inline-block;
    max-width: 340px;
    width: 100%;
    margin-left: 6px;
    position: relative;
    overflow: hidden;
    select {
      width: 100%;
      background-color: transparent;
      border: 1px solid $darkgreen;
      height: 30px;
      -webkit-appearance: none;
      box-shadow: none;
      outline: none;
      padding: 0 8px;
    }

    .select2-container--default .select2-selection--single {
      background-color: transparent;
      border: 1px solid $darkgreen;
      border-radius: 0;
      color: $darkgreen;
      height: 30px;
    }
    .select2-container--default .select2-selection--single .select2-selection__clear {
      -webkit-appearance:none;
      border: none;
      box-shadow: none;
      margin: 0 0;
      padding: 0 8px;
      position: absolute;
      top: 0;
      right: 25px;
      height: 29px;
    }
    .select2-container--default .select2-selection--single .select2-selection__arrow {
      width: 28px;
      height: 29px;
    }
    .select2-selection__rendered {
      font-family: $font1;
      font-size: 14px;
      font-weight: 600;
      line-height: 28px;
      color: $darkgreen;
      text-transform: uppercase;
    }
    .select2-selection__arrow {
      b {
        visibility: hidden;
      }
      &:before, &:after {
        content:"";
        display: block;
        width: 10px;
        height: 2px;
        background: $darkgreen;
        position: absolute;
        top: 13px;
        right: 6px;
      }
      &:before {
        transform: translateX(-6px) rotate(45deg);
      }
      &:after {
        transform: rotate(-45deg);
      }
    }
  }
}
.select2-dropdown {
  background-color: #F3E2CB;
  border: 1px solid $darkgreen;
  margin-top: 32px;
}
.select2-container--default .select2-selection--single .select2-selection__placeholder {
  color: $darkgreen;
}
.select2-results__option {
  font-family: $font1;
  font-size: 14px;
  font-weight: 600;
  line-height: 28px;
  color: $darkgreen;
  text-transform: uppercase;
}
.select2-container--default .select2-search--dropdown .select2-search__field {
  background-color: #F3E2CB;
  border: 1px solid $darkgreen;
  border-radius: 0;
  -webkit-appearance: none;
  box-shadow: none;
  outline: none;
  font-family: $font1;
  font-size: 14px;
  font-weight: 600;
  color: $darkgreen;
}
.subpage-banner {

}
.entry-title {
  font-family: $font1;
  font-size: 30px;
  font-weight: 600;
  line-height: 28px;
  color: $darkgreen;
  text-transform: uppercase;
  letter-spacing: 0;
}
.title-orange {
  font-family: $font1;
  font-size: 20px;
  font-weight: 600;
  line-height: 28px;
  color: $orange;
  letter-spacing: 0;
  text-transform: uppercase;
}
#primary.single-competition {
  .other-links-btn {
    width: auto;
    display: inline-block;
    margin: 5px;
    @media screen and (min-width: $tabwidth) {
      margin: 0 10px 0 0;
    }
    a {
      background-color: $color-green;
      color: $color-orange;
      padding: 10px 25px;
      transition: all ease .2s;
      text-decoration: none;
      display: block;
      &:hover {
        background-color: $color-orange;
        color: $color-green;
      }
    }
  }
}
body.term-deep-water-solo {
  h3.comp-date {
    color: #FAF0D0;
    margin-bottom: 10px;
  }
  .other-links-btn {
    width: 100%;
    // display: inline-block;
    margin: 10px 0;
    text-align: center;
    @media screen and (min-width: $tabwidth) {
      margin: 10px 0;
    }
    a {
      background-color: #fff;
      color: $color-orange  !important;
      padding: 10px 25px;
      transition: all ease .2s;
      text-decoration: none;
      display: block;
      &:hover {
        background-color: $color-orange;
        color: $color-green;
      }
    }
  }
}
body.page-template-page-clinics {
  padding: 50px 0;
  .pagecontent {
    max-width: 1100px;
    width: 100%;
    margin: 0 auto;
  }

}
/* ... */

